--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@tiptap/extension-blockquote": "^3.6.6",
     "@tiptap/extension-bullet-list": "^3.6.6",
     "@tiptap/extension-code-block-lowlight": "^3.6.6",
+    "@tiptap/extension-color": "^3.11.0",
     "@tiptap/extension-heading": "^3.6.6",
+    "@tiptap/extension-highlight": "^3.11.0",
     "@tiptap/extension-image": "^3.6.6",
     "@tiptap/extension-link": "^3.6.6",
     "@tiptap/extension-ordered-list": "^3.6.6",
@@ -54,7 +56,9 @@
     "@tiptap/extension-table-header": "^3.6.6",
     "@tiptap/extension-table-row": "^3.6.6",
     "@tiptap/extension-text-align": "^3.6.6",
+    "@tiptap/extension-text-style": "^3.11.0",
     "@tiptap/extension-underline": "latest",
+    "@tiptap/extension-youtube": "^3.11.0",
     "@tiptap/extensions": "latest",
     "@tiptap/pm": "latest",
     "@tiptap/react": "latest",
